# JEPA-Abstract-Architecture

./: README.md  pyproject.toml
src/JEPA-Abstract-Architecture/: __init__.py  abstract_jepa.py
src/abstractjepa/: __init__.py  abstract_jepa.py
src/abstractjepa/loss/: VICRegLoss.py  __init__.py
